Added some basic examples of experiments to the Home.Index action & view.

--- a/src/ABsoluteMaybe.SampleWebsite.MVC2/Views/Shared/Site.Master
+++ b/src/ABsoluteMaybe.SampleWebsite.MVC2/Views/Shared/Site.Master
@@ -21,9 +21,9 @@
             
             <div id="menucontainer">
             
-                <ul id="menu">              
-                    <li><%: Html.ActionLink("Home", "Index", "Home")%></li>
-                    <li><%: Html.ActionLink("About", "About", "Home")%></li>
+                <ul id="menu">
+                    <li><%: Html.ActionLink("Home", "Index", "Home", new{area = ""}, null)%></li>
+					<li><%: Html.ActionLink("ABsoluteMaybe Dashboard", "Index", "Dashboard", new{area = "ABsoluteMaybeDashboard"}, null)%></li>
                 </ul>
             
             </div>
